Greatly refactored /run endpoint

--- a/config.json
+++ b/config.json
@@ -10,5 +10,8 @@
   },
   "inExt": ".in",
   "outExt": ".out",
-  "graders": ["default"]
+  "graders": ["default"],
+  "testsDir": "uploads/tests",
+  "graderDir": "graders",
+  "runTestsAsync": false
 }
