Refactored grader preperation

--- a/config.json
+++ b/config.json
@@ -13,7 +13,7 @@
     "c++17": {
       "compile": {
         "cmd": "gcc",
-        "opts": ["-std=c++17", "-Wall", "-Wextra", "-O3", "-lm", "-o", "a.o", "$SOURCEFILE"]
+        "opts": ["-std=c++17", "-Wall", "-Wextra", "-O3", "-o", "a.o", "$SOURCEFILE"]
       },
       "run": {
         "cmd": "$OUTFILE"
