Added routes testsuite

--- a/config.json
+++ b/config.json
@@ -49,5 +49,6 @@
   "testsDir": "uploads/tests",
   "graderDir": "graders",
   "graders": ["default", "strict"],
-  "runTestsAsync": false
+  "runTestsAsync": false,
+  "defaultTestsuite": "global"
 }
