Fixed  c++ `__gxx_personality_v0` bug

--- a/config.json
+++ b/config.json
@@ -14,7 +14,7 @@
     "c++17": {
       "compile": {
         "cmd": "gcc",
-        "opts": ["-std=c++17", "-Wall", "-Wextra", "-O3", "-o", "a.o", "$SOURCEFILE"]
+        "opts": ["-std=c++17", "-Wall", "-Wextra", "-O3", "-o", "a.o", "$SOURCEFILE", "-lstdc++"]
       },
       "run": {
         "cmd": "$OUTFILE"
